documentation for flag items method and reset listener added

--- a/src/main/webapp/fireworks.html
+++ b/src/main/webapp/fireworks.html
@@ -123,9 +123,7 @@
                     <b>identifier</b> : string
                 </td>
                 <td>
-                    Flags pathways where the identifier is found. It accepts main identifiers but also
-                    cross references, and gene names as well as pathways and physical entities stable
-                    identifiers
+                    Flags pathways where the identifier is found. It accepts main identifiers but also cross references, and gene names as well as pathways and physical entities stable identifiers
                 </td>
             </tr>
             <tr>
