Adding setColorProfile. Using release versions. GWT Version

--- a/src/main/webapp/fireworks.html
+++ b/src/main/webapp/fireworks.html
@@ -211,6 +211,29 @@
             </tr>
             <tr>
                 <td>
+                    <b>getAvailableColorProfiles()</b> :: List of Strings
+                </td>
+                <td>
+
+                </td>
+                <td>
+                    Retrieves the names of the available color profiles.
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>setColorProfile(colorProfile)</b> :: void
+                </td>
+                <td>
+                    Color Profile<br>
+                    <b>colorProfile</b> : string
+                </td>
+                <td>
+                    Change the color profile based on the specified parameters. If invalid, standard will be used [Copper]
+                </td>
+            </tr>
+            <tr>
+                <td>
                     <b>showAll()</b> :: void
                 </td>
                 <td>
